# azurekinect

./: .clang-format  .gitignore  CMakeLists.txt  depth2color.cpp  main.cpp  mkvparser.cpp  mkvparser.hpp  utils.hpp
src/: calibration_test.cpp  depth2color.cpp  exportall.cpp  genpointclouds.cpp  getdistance.cpp  getground.cpp  main.cpp  mkvparser.hpp  utils.hpp
